force-app/main/default/objects/FreightRateRequest__c/fields/Destination_Type__c.field-meta.xml
<CustomField>
    <fullName>Destination_Type__c</fullName>
    <label>Destination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Plant (Internal Transfer)</fullName>
            </value>
            <value>
                <fullName>Imerys Warehouse</fullName>
            </value>
            <value>
                <fullName>Transload</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>