force-app/main/default/objects/FreightRateRequest__c/fields/Manufacturing_Plant__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturing Plant</label>
    <referenceTo>Manufacturing_Plant__c</referenceTo>
    <relationshipLabel>Freight Rate Requests</relationshipLabel>
    <relationshipName>Freight_Rate_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>