force-app/main/default/objects/FreightRateRequest__c/fields/QLIImerysManufacturingProd__c.field-meta.xml
<CustomField>
    <fullName>QLIImerysManufacturingProd__c</fullName>
    <formula>Quote_Line_Item__r.ImerysManufacturingPlant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QLIImerysManufacturingProd</label>
    <type>Text</type>
</CustomField>